# console

./: .editorconfig  .gitignore  .gitlab-ci.yml  NEWS  README.md  console.doap  gcovr.cfg  gi.in  kgx.doap  meson.build  meson.format  meson.options  meson_options.txt  org.gnome.zbrown.KingsCross.json  test_colours.py
.gitlab-ci/: ci-32-cross
build-aux/flatpak/: org.gnome.Console.Devel.json
data/: meson.build  org.gnome.Console.desktop.in.in  org.gnome.Console.gschema.xml.in  org.gnome.Console.metainfo.xml.in.in  org.gnome.zbrown.KingsCross-generic.desktop.in  org.gnome.zbrown.KingsCross-generic.desktop.in.in  org.gnome.zbrown.KingsCross.appdata.xml.in  org.gnome.zbrown.KingsCross.appdata.xml.in.in  org.gnome.zbrown.KingsCross.desktop.in  org.gnome.zbrown.KingsCross.desktop.in.in  org.gnome.zbrown.KingsCross.gschema.xml  org.gnome.zbrown.KingsCross.gschema.xml.in  org.gnome.zbrown.KingsCross.metainfo.xml.in.in  org.gnome.zbrown.KingsCross.service.in
debian/: changelog  control  copyright  rules
doc/: kgx-docs.xml  meson.build
doc/xml/: meson.build
nautilus/: kgx-nautilus-menu-item.c  kgx-nautilus-menu-item.h  kgx-nautilus.c  kgx-nautilus.h  meson.build
po/: LINGUAS  POTFILES  POTFILES.in  ab.po  ar.po  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lo.po  lt.po  lv.po  meson.build  (+24 more)
src/: fp-vte-util.c  fp-vte-util.h  help-overlay.ui  kgx-about.c  kgx-about.h  kgx-application.c  kgx-application.h  kgx-close-dialog-row.c  kgx-close-dialog-row.h  kgx-close-dialog-row.ui  kgx-close-dialog.c  kgx-close-dialog.h  kgx-close-dialog.ui  kgx-colour-utils.c  kgx-colour-utils.h  kgx-depot.c  kgx-depot.h  kgx-despatcher.c  kgx-despatcher.h  kgx-drop-target.c  kgx-drop-target.h  kgx-empty.c  kgx-empty.h  kgx-empty.ui  kgx-file-closures.h  kgx-font-picker.c  kgx-font-picker.h  kgx-font-picker.ui  kgx-fullscreen-box.c  kgx-fullscreen-box.h  kgx-fullscreen-box.ui  kgx-git-tag.h.in  kgx-icon-closures.h  kgx-livery-manager.c  kgx-livery-manager.h  kgx-livery.c  kgx-livery.h  kgx-local-page.c  kgx-local-page.h  kgx-local-page.ui  (+94 more)
src/pids/: kgx-gtop.c  kgx-gtop.h  kgx-pids.c  kgx-pids.h  meson.build
src/preferences/: kgx-font-picker.c  kgx-font-picker.ui  kgx-preferences-window.c  kgx-preferences-window.ui
src/styles/: _definitions.scss  _drawing.scss  _recoloring.scss  _styles.scss  meson.build  styles-dark.scss  styles-hc-dark.scss  styles-hc.scss  styles-light.scss  styles.scss
subprojects/: adwaita.wrap  glib.wrap  gtk.wrap  gtk3.wrap  handy.wrap  pango.wrap  sassc.wrap  vte.wrap
tests/: dummy-process.c  kgx-ignore-deprecations.h  kgx-test-gtk-utils.c  kgx-test-gtk-utils.h  kgx-test-utils.c  kgx-test-utils.h  kgx-test.gresource.xml.in  lsan.supp  meson.build  test-colour-utils.c  test-depot.c  test-despatcher.c  test-empty.c  test-file-closures.c  test-icon-closures.c  test-livery.c  test-locale.c  test-pages.c  test-palette.c  test-playbox.c  test-proxy-info.c  test-remote.c  test-settings.c  test-shared-closures.c  test-spad-source.c  test-spad.c  test-system-info.c  test-tab.c  test-templated.c  test-theme-switcher.c  test-train.c  test-utils.c  test-window.c  test_app.py  test_term.py  test_win.py
tests/test/: also.ui  base.ui
