
option('gtop',
       type: 'boolean',
       value: true,
       description: 'Use libgtop to track children, you probably DO want this')

option('gtk_doc',
       type: 'boolean',
       value: false,
       description: 'Whether to generate the API reference, you probably don\'t want this')

option('gir',
       type: 'boolean',
       value: false,
       description: 'Whether to generate GIR, you probably don\'t want this')

option('vapi',
       type: 'boolean',
       value: false,
       description: 'Whether to generate VAPI, you probably don\'t want this')
